# Sketch

./: .gitignore  CMakeLists.txt  LICENSE
driver/: main.cpp
inc/: Point2D.h  Polygon.h  Polygon_impl.h  Quad.h  Triangle.h
src/: Point2D.cpp  Quad.cpp  Triangle.cpp
